src/objects/SurveyTaker__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Taken By Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Surveys Taken</relationshipLabel>
        <relationshipName>Surveys_Taken</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allow_Data_Sharing__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The flag to identify if this record can be shared with MBJ</description>
        <label>Allow Data Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Surveys Taken</relationshipLabel>
        <relationshipName>Surveys_Taken</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>SurveyTakers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Taken By Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Surveys Taken</relationshipLabel>
        <relationshipName>SurveyTakers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By_EP_Transaction__c</fullName>
        <description>The integration layer (EP) needs this field for defect handling and debugging.</description>
        <label>Created By EP Transaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Surveys Taken (Dealer Account)</relationshipLabel>
        <relationshipName>Surveys_Taken1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Answered_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Answered Question</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipLabel>Surveys Taken</relationshipLabel>
        <relationshipName>Surveys_Taken</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Taken By Leads</label>
        <referenceTo>Lead__c</referenceTo>
        <relationshipLabel>Surveys Taken</relationshipLabel>
        <relationshipName>Surveys_Taken</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;) ,&apos;AU&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;CN&apos;), &apos;CN&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;KR&apos;), &apos;KR&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;JP&apos;), &apos;JP&apos;,
IF(ISPICKVAL($User.Market__c, &apos;TH&apos;), &apos;TH&apos;,&apos;NA&apos;)))))</defaultValue>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retail Campaign</label>
        <referenceTo>Retail_Campaign__c</referenceTo>
        <relationshipLabel>Surveys Taken</relationshipLabel>
        <relationshipName>Surveys_Taken</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SurveyTakenByVehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Taken By Vehicle Relationship</label>
        <referenceTo>Vehicle_Relationship__c</referenceTo>
        <relationshipLabel>Surveys Taken</relationshipLabel>
        <relationshipName>Surveys_Taken</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Taken_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Survey Taken Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Taking_Status__c</fullName>
        <label>Survey Taking Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Finish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipName>SurveyTakers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Taken__c</fullName>
        <description>Whether the survey was taken or not</description>
        <label>Taken</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_ID__c</fullName>
        <label>Task ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Be_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Be Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Updated_By_EP_Transactions__c</fullName>
        <description>The integration layer (EP) needs this field for defect handling and debugging.</description>
        <label>Updated By EP Transactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Taken By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Surveys_Taken</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>View_By_All__c</fullName>
        <defaultValue>false</defaultValue>
        <label>View By All</label>
        <type>Checkbox</type>
    </fields>
    <label>Survey Taken</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <role>Central</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DM</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Survey__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Survey__c</field>
            <operation>equals</operation>
            <value>新型Sクラス カブリオレ／新型SL／新型SLCセントラルDM2016</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>今日作成のセントラルDM</label>
        <language>ja</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MBJ_IT_Department</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DM1</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Survey__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Survey__c</field>
            <operation>equals</operation>
            <value>新型Sクラス カブリオレ／新型SL／新型SLCセントラルDM2016</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>今日作成のセントラルDM_コピー</label>
        <language>ja</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MBJ_IT_Department</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>E_S_DM2016</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Survey__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Survey__c</field>
            <operation>equals</operation>
            <value>E&amp;SクラスセントラルDM2016</value>
        </filters>
        <filters>
            <field>Lead__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>E&amp;SセントラルDM2016</label>
        <language>ja</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MBJ_IT_Department</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MBK_Surveys_Taken</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MD__c</field>
            <operation>equals</operation>
            <value>KR</value>
        </filters>
        <label>MBK Surveys Taken</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MBK_Management</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys Taken</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Survey_Taken_Share__c</fullName>
        <label>Survey Taken Share</label>
    </sharingReasons>
</CustomObject>